--- a/infrastructure/stack.yaml
+++ b/infrastructure/stack.yaml
@@ -54,11 +54,23 @@ Resources:
           Fn::Sub:
             - |
               #!/bin/bash -xe
+              export INSTANCE_ID=`curl http://169.254.169.254/latest/meta-data/instance-id`
+              while [[ "True" != $(aws autoscaling set-instance-protection --region ${AWS::Region} --instance-ids $INSTANCE_ID --auto-scaling-group-name ${NameASG} --protected-from-scale-in && echo "True" || echo "False") ]]; do sleep 5; done
+
               sudo yum update -y
               sudo yum install -y python3 python3-pip
-              
+              sudo mkdir /data
+              sudo chmod -R 777 /data
+              mkdir /data/coordinators
+
               # aws s3 cp s3://${BUCKET}/src/ . --recursive
-            - { "BUCKET": !ImportValue BigDataS3Bucket}
+              # python3 -m coordinator.py
+
+              while [[ "True" != $(aws autoscaling set-instance-protection --region ${AWS::Region} --instance-ids $INSTANCE_ID --auto-scaling-group-name ${NameASG} --no-protected-from-scale-in && echo "True" || echo "False") ]]; do sleep 5; done
+              sleep 300
+              sudo poweroff
+
+            - { "BUCKET": !ImportValue BigDataS3Bucket, "NameASG": "infrastructure-crawler-asg-useast1"}
 
   CrawlerSQS:
     Type: "AWS::SQS::Queue"
